cabal-version:      2.4
name:               aoc2020
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Anvit Garg
maintainer:         anvit25@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable aoc2020
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Helper.Parse, Helper.Misc
        Day1,  Day2,  Day3,  Day4,  Day5
        Day6,  Day7,  Day8,  Day9,  Day10
        Day11, Day12, Day13, Day14, Day15
        -- , Day16, Day17, Day18, Day19, Day20
        -- , Day21, Day22, Day23, Day24, Day25

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  
        , base ^>=4.14.1.0
        , parsec ^>=3.1.10.0
        , containers ^>=0.6.0.0
        , memoize ^>=0.8.0.0
        , split ^>=0.2.3.0

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall


Test-Suite aoc2020-testsuite
    Type:     exitcode-stdio-1.0
    Main-is:  TestSuite.hs
    Build-depends:  
        , base ^>=4.14.1.0
        , parsec ^>=3.1.10.0
        , containers ^>=0.6.0.0
        , memoize ^>=0.8.0.0
        , QuickCheck
        , HUnit
        , hspec
    
    other-modules: Helper.Parse, Helper.Misc
        Day1,  Day2,  Day3,  Day4,  Day5
        Day6,  Day7,  Day8,  Day9,  Day10
        Day11, Day12, Day13

    hs-source-dirs:   tests, app
    default-language: Haskell2010
    ghc-options: -Wall
